ajuste na celula de analise final

--- a/tech_challenge_4_treinamento_modelo_v2.ipynb
+++ b/tech_challenge_4_treinamento_modelo_v2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPkhwU7k9aJCiu4CJMdvRT",
+      "authorship_tag": "ABX9TyO92fdGp1OvZB2+wc26VlH5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13527,17 +13527,46 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "round(0.8369 * 100,1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nVPQxPXecED_",
+        "outputId": "199016e4-c38b-4467-a4a3-c1027dadbaf3"
+      },
+      "execution_count": 148,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "83.7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 148
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "Após o teste das 4 famílias de algoritmos o melhor modelo foi o XGBoost otimizado atingindo performance de 82.5% de acurácia.\n",
+        "Após o teste das 4 famílias de algoritmos o melhor modelo foi o Random Forest otimizado atingindo performance de 83,7% de acurácia.\n",
         "\n",
         "**Resultados da engenharia de variaveis:**\n",
         "\n",
-        "**- Remover variaveis:** A performance piorou. As variaveis \"fracas\" scc, faf e tue não eram ruído e continham informação sutil.\n",
+        "**- Remover variaveis:**\n",
+        "-Para o modelo XGBoost a performance piorou. As variaveis \"fracas\" scc, faf e tue não eram ruído e continham informação sutil.\n",
+        "\n",
+        "-Para o modelo Random Forest remover a variavel scc melhorou a performance do modelo.\n",
         "\n",
         "**- Adicionar variaveis:** A performance piorou. O modelo já era inteligente o suficiente para encontrar essas interações sozinho.\n",
         "\n",
-        "**Conclusão:** O pico de performance que é possível extrair deste conjunto de dados ocorreu com o modelo treinado peli `XGBoost` otimizadao , treinado o arquivo completo obesidade_processado.csv original."
+        "**Conclusão:** O pico de performance que é possível extrair deste conjunto de dados ocorreu com o modelo treinado pelo `Random Forest` otimizadao , treinado o dataframe simplificado do arquivo obesidade_processado.csv original."
       ],
       "metadata": {
         "id": "Q2ivS-if8dqW"
@@ -13550,15 +13579,13 @@
         "\n",
         "Modelo com acurácia ≥ 75%:\n",
         "\n",
-        "O modelo  XGBoost otimizado teve 82.5% de acurácia, superando a meta.\n",
+        "O modelo  Random Forest otimizado com o dataframe simplificado sem a variável scc. Ele teve 83.7% de acurácia, superando a meta.\n",
         "\n",
         "**Ponto de atenção:**\n",
         "\n",
         "f1-Score por classe:\n",
         "\n",
-        "A Classe 4 teve um F1-Score de 0.67.\n",
-        "\n",
-        "A Classe 6 teve umF1-Score de 0.76"
+        "A Classe 4 teve um F1-Score de 0.68.\n"
       ],
       "metadata": {
         "id": "AD0tYu_JHsls"
